[tool.poetry]
name = "mercapi"
version = "0.1.0"
description = "Python API for querying and browsing mercari.jp"
authors = ["take-kun <109226194+take-kun@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
ecdsa = "^0.18.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
