[tool.poetry]
name = "mercapi"
version = "0.4.2"
description = "Python API for querying and browsing mercari.jp"
authors = ["take-kun <109226194+take-kun@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/take-kun/mercapi/"
keywords = ["api", "scraping"]

[tool.poetry.dependencies]
python = "^3.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
ecdsa = "^0.19.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
vcrpy = "^4.2.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
black = "^22.6.0"
pytest-recording = "^0.12.1"
pdoc = "^12.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^12.2.0"

[tool.poetry.group.lint.dependencies]
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
